basic-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels:
    app: webapp
spec:
  containers:
    - name: n1
      image: nginx:alpine
      ports:
        - containerPort: 80
