logger.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logger
spec:
  replicas: 5
  selector:
    matchLabels:
      app: logger
  template:
    metadata:
      labels:
        app: logger
    spec:
      containers:
        - name: n1
          image: gayatrisa/k8s-logger:ubuntu
