persistent-vols.yaml
apiVersion: v1
kind: Pod
metadata:
  name: task-pv-pod
spec:
  volumes:
    - name: pv-storage
      persistentVolumeClaim:
        claimName: pv-volume-claim
  containers:
    - name: pv-container
      image: nginx
      ports:
        - containerPort: 80
      volumeMounts:
        - name: pv-storage
          mountPath: "/usr/share/nginx/html"

---
apiVersion: v1
kind: Pod
metadata:
  name: task-pv-pod2
spec:
  volumes:
    - name: pv-storage2
      persistentVolumeClaim:
        claimName: pv-volume-claim
  containers:
    - name: pv-container2
      image: nginx
      ports:
        - containerPort: 80
      volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: pv-storage2
