pod-scheduling.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels:
    app: webapp
spec:
  containers:
    - name: n1
      image: nginx:alpine
      ports:
        - containerPort: 80
#  nodeName: ip-172-31-17-192
#  tolerations:
#    - key: "color"
#      operator: "Equal"
#      value: "red"
#      effect: "NoSchedule"
#  nodeSelector:
#    alphabet: A
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchExpressions:
              - key: alphabet
                operator: NotIn
                values:
                  - A
