secret-spec.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: consumesec-env
spec:
  volumes: # load secret as volume (it is mounted in the container below)
  - name: secretvol
    secret:
      secretName: mysecret
  containers:
  - name: shell
    image: centos:7
    command:
      - "bin/bash"
      - "-c"
      - "sleep 10000"
    env: # load a single key from a secret
      - name: MY_USERNAME
        valueFrom:
          secretKeyRef:
            name: mysecret
            key: username
    envFrom: # load the whole secret
      - secretRef:
          name: mysecret
    volumeMounts:
      - name: secretvol
        mountPath: "/tmp/apikey"
        readOnly: true
