service-account-with-roles.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-service-account
spec:
  serviceAccountName: test-service-account
  containers:
    - name: n1
      image: gayatrisa/ubuntu:trusty-utils
      command: ["/bin/bash"]
      args:
        - "-c"
        - >
          while true; do
            echo "Keep Alive!";
            sleep 10;
          done
