2deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      name: mariadb-pod
      labels:
        app: db
    spec:
      containers:
        - name: mariadb
          image: mariadb:10.5.4
          ports:
            - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: dbservice
spec:
  type: ClusterIP
  selector:
    app: db
  ports:
    - port: 3306


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - name: n1
          image: gayatrisa/php-mysql:test-db
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: webservice
spec:
  type: NodePort
  selector:
    app: webapp
  ports:
    - port: 9300
      targetPort: 80
      nodePort: 32000
