basic-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: NodePort
  ports:
    - port: 9200
      targetPort: 80
      nodePort: 31000
  selector:
    app: webapp
