kubernetes-vols.yaml
apiVersion: v1
kind: Service
metadata:
  name: two-containers
spec:
  type: NodePort
  ports:
    - port: 8090
      targetPort: 80
      protocol: TCP
  selector:
    app: two

---
apiVersion: v1
kind: Pod
metadata:
  name: two-containers
  labels:
    app: two
spec:
  volumes:
  - name: shared-data
    emptyDir: {}
  containers:
  - name: first
    image: nginx
    ports:
      - containerPort: 80
    volumeMounts:
      - name: shared-data
        mountPath: /usr/share/nginx/html
  - name: second
    image: debian
    volumeMounts:
    - name: shared-data
      mountPath: /pod-data
    command: ["/bin/sh"]
    args:
      - "-c"
      - >
        while true; do
          date >> /pod-data/index.html;
          echo Hello from the second container more >> /pod-data/index.html;
          sleep 20;
        done
