namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: myspace

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myservice
  namespace: myspace
spec:
  selector:
    matchLabels:
      run: myservice
  replicas: 1
  template:
    metadata:
      labels:
        run: myservice
    spec:
      containers:
      - name: myservice
        image: gayatrisa/php-mysql:test-and-plain
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
---
apiVersion: v1
kind: Service
metadata:
  name: myservice
  namespace: myspace
  labels:
    run: myservice
spec:
  ports:
  - port: 80
  selector:
    run: myservice
